# cig

./: .gitignore  CMakeLists.txt  README.md
cmake/: environment.cmake  modules.cmake
extra/: build-libclang.ps1  build-libclang.sh
extra/vs/: cig.natvis  visual_studio_test_settings.gta.runsettings
modules/cig/src/: main.cpp
modules/cig_core/: CMakeLists.txt
modules/cig_core/include/: cig_common.h  cig_common_dispatcher.h  cig_common_indexed_ptr.h  cig_common_small_vector.h  cig_core.h  cig_mapper_model.h  cig_settings.h  cig_source_cursor_handlers.h  cig_source_map.h  cig_source_mapper.h  cig_source_model.h  cig_source_parser.h  cig_source_type_handlers.h
modules/cig_core/src/: cig_core.cpp  cig_source_cursor_handlers.cpp  cig_source_map.cpp  cig_source_mapper.cpp  cig_source_model.cpp  cig_source_type_handlers.cpp
modules/cig_core/test/: CMakeLists.txt  unit_small_vector.cpp
